src/test/ui/parser/mod_file_not_exist_windows.stderr
error[E0583]: file not found for module `not_a_real_file`
  --> $DIR/mod_file_not_exist_windows.rs:3:1
   |
LL | mod not_a_real_file;
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `not_a_real_file`, create file "$DIR/not_a_real_file.rs"

error[E0433]: failed to resolve: use of undeclared crate or module `mod_file_aux`
  --> $DIR/mod_file_not_exist_windows.rs:7:16
   |
LL |     assert_eq!(mod_file_aux::bar(), 10);
   |                ^^^^^^^^^^^^ use of undeclared crate or module `mod_file_aux`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0433, E0583.
For more information about an error, try `rustc --explain E0433`.
